--- a/result.html
+++ b/result.html
@@ -1,52 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medical App – Result</title>
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <!-- Title -->
+    <title>{% block title %}Sensor Analysis Result{% endblock %}</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Link to your stylesheets (Tailwind or custom) -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
-  <style>
-    body {
-      background: linear-gradient(135deg, #e0f7fa 0%, #d1c4e9 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-    }
-    .result-box {
-      background: #ffffff;
-      padding: 40px 30px;
-      border-radius: 20px;
-      box-shadow: 0 12px 28px rgba(0,0,0,0.15);
-      max-width: 600px;
-      width: 90%;
-      text-align: center;
-    }
-    h2 {
-      color: #007bff;
-      font-weight: 700;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 1.1rem;
-      color: #555;
-    }
-  </style>
+    <!-- Additional meta or link tags can go here (like Open Graph for social media previews) -->
 </head>
-<body>
 
-  <div class="result-box">
-    <i class="bi bi-clipboard2-check-fill display-3 text-primary mb-3"></i>
-    <h2>Result</h2>
-    <p>Health summaries and diagnostic results appear here.</p>
-  </div>
+<body class="bg-gray-900 text-white font-sans antialiased">
+    <div class="container mx-auto mt-8 p-6">
+        {% block content %}
+        <h2 class="text-3xl font-bold text-center text-blue-500 mb-10">
+            ✅ Sensor Analysis Result
+        </h2>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Summary Cards with Trend Indicators -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
+            <!-- Temperature Card -->
+            <div class="card p-6 bg-gray-800 rounded-xl shadow hover:scale-105 transition-transform duration-300">
+                <h3 class="text-lg font-semibold mb-2 text-white">🌡 Temperature</h3>
+                <p class="text-3xl font-bold text-blue-400">{{ temp_avg }} °C</p>
+                <p class="text-gray-400 text-sm">Average (selected period)</p>
+                <p class="mt-2 text-green-400 text-sm">
+                    <span class="font-semibold">Max:</span> {{ temp_max }} °C
+                    &nbsp;|&nbsp;
+                    <span class="font-semibold">Min:</span> {{ temp_min }} °C
+                </p>
+            </div>
+
+            <!-- Bacteria Card -->
+            <div class="card p-6 bg-gray-800 rounded-xl shadow hover:scale-105 transition-transform duration-300">
+                <h3 class="text-lg font-semibold mb-2 text-white">🧫 Bacteria Level</h3>
+                <p class="text-3xl font-bold text-red-400">{{ bact_avg }} CFU/mL</p>
+                <p class="text-gray-400 text-sm">Average count detected</p>
+                <p class="mt-2 text-green-400 text-sm">
+                    <span class="font-semibold">Max:</span> {{ bact_max }}
+                    &nbsp;|&nbsp;
+                    <span class="font-semibold">Min:</span> {{ bact_min }}
+                </p>
+            </div>
+
+            <!-- Water Quality Card -->
+            <div class="card p-6 bg-gray-800 rounded-xl shadow hover:scale-105 transition-transform duration-300">
+                <h3 class="text-lg font-semibold mb-2 text-white">💧 Water Quality</h3>
+                <p class="text-3xl font-bold text-green-400">{{ quality_status }}</p>
+                <p class="text-gray-400 text-sm">Overall assessment based on all parameters</p>
+            </div>
+        </div>
+
+        <!-- Detailed Metrics Table -->
+        <div class="overflow-x-auto mb-10">
+            <table class="table-auto w-full border-collapse bg-gray-900 rounded-lg shadow">
+                <thead>
+                    <tr class="bg-gray-700 text-gray-200 uppercase text-sm tracking-wide">
+                        <th class="p-3 border-b">Parameter</th>
+                        <th class="p-3 border-b">Average</th>
+                        <th class="p-3 border-b">Min</th>
+                        <th class="p-3 border-b">Max</th>
+                    </tr>
+                </thead>
+                <tbody class="text-gray-300">
+                    <tr class="hover:bg-gray-800">
+                        <td class="p-3 border-b">Temperature (°C)</td>
+                        <td class="p-3 border-b">{{ temp_avg }}</td>
+                        <td class="p-3 border-b">{{ temp_min }}</td>
+                        <td class="p-3 border-b">{{ temp_max }}</td>
+                    </tr>
+                    <tr class="hover:bg-gray-800">
+                        <td class="p-3 border-b">Humidity (%)</td>
+                        <td class="p-3 border-b">{{ hum_avg }}</td>
+                        <td class="p-3 border-b">{{ hum_min }}</td>
+                        <td class="p-3 border-b">{{ hum_max }}</td>
+                    </tr>
+                    <tr class="hover:bg-gray-800">
+                        <td class="p-3 border-b">Turbidity (NTU)</td>
+                        <td class="p-3 border-b">{{ turb_avg }}</td>
+                        <td class="p-3 border-b">{{ turb_min }}</td>
+                        <td class="p-3 border-b">{{ turb_max }}</td>
+                    </tr>
+                    <tr class="hover:bg-gray-800">
+                        <td class="p-3 border-b">pH</td>
+                        <td class="p-3 border-b">{{ ph_avg }}</td>
+                        <td class="p-3 border-b">{{ ph_min }}</td>
+                        <td class="p-3 border-b">{{ ph_max }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Action Buttons -->
+        <div class="flex flex-col md:flex-row justify-center items-center gap-6">
+            <!-- Back to Analysis -->
+            <a href="{{ url_for('Analog') }}"
+                class="bg-blue-600 hover:bg-blue-700 !text-white font-semibold text-lg px-6 py-2 rounded-lg shadow border-2 border-blue-800 transition-all duration-300 transform hover:scale-105 hover:shadow-lg active:scale-95 active:border-blue-400">
+                🔄 Back to Analysis
+            </a>
+
+            <!-- Download Report -->
+            <a href="{{ url_for('download_report') }}"
+                class="bg-green-600 hover:bg-green-700 !text-white font-semibold text-lg px-6 py-2 rounded-lg shadow border-2 border-green-800 transition-all duration-300 transform hover:scale-105 hover:shadow-lg active:scale-95 active:border-green-400">
+                ⬇️ Download Report
+            </a>
+        </div>
+
+      
+    </div>
+
+    <!-- Optional: Add external JS files or libraries like Tailwind, AlpineJS, etc. -->
+    <!-- <script src="path/to/your/scripts.js"></script> -->
 </body>
+
 </html>
