--- a/result.html
+++ b/result.html
@@ -112,7 +112,7 @@
             </a>
         </div>
 
-      
+       {% endblock %}
     </div>
 
     <!-- Optional: Add external JS files or libraries like Tailwind, AlpineJS, etc. -->
@@ -120,3 +120,4 @@
 </body>
 
 </html>
+
