--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- Intro1 -->
   <!-- Intro1 Section with Debugging -->
 <section id="intro1" class="intro-screen active">
-  <img src="logo.jpeg" alt="Logo">
+  <img src="logo1.jpeg" alt="Logo">
 </section>
 
 
@@ -132,5 +132,6 @@
   </script>
 </body>
 </html>
+
 
 
