--- a/dashboard.html
+++ b/dashboard.html
@@ -114,7 +114,7 @@
 
   <!-- Welcome Section -->
   <div class="container-fluid welcome-container d-flex flex-column justify-content-center align-items-center text-center">
-    <div class="logo">⚕️</div>
+    <div class="logo1.jpeg">⚕️</div>
     <h1 class="display-4 fw-bold">Smart Healthcare Monitoring</h1>
     <p class="lead mt-3">An Innovative Solution for Real-time Patient Care and Analysis</p>
     <a href="mainpage.html" class="btn btn-custom btn-lg mt-4 shadow">Get Started</a>
@@ -124,4 +124,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
