--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
 
     <!-- Brand / Logo -->
     <a class="navbar-brand fw-bold text-primary d-flex align-items-center" href="{{ url_for('mainpage') }}">
-      <img src="logo1.jpeg" alt="Logo" 
+      <img src="logo.jpeg" alt="Logo" 
            style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover; margin-right: 8px;">
      VIORA
     </a>
@@ -124,6 +124,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
